--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</div>
 				<div class="md_hdr_ctr">
 					<a href="index-2.html">
-						<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
+						<img class="tplogo" src="./images/lightLogo1.png" alt="Mahadev Book" />
 						<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
 					</a>
 				</div>
@@ -215,7 +215,7 @@
 				</div>
 				<div class="md_cs_rgt">
 					<div class="md_logocs">
-						<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
+						<img class="tplogo" src="./images/lightLogo1.png" alt="Mahadev Book" />
 						<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
 						<div class="md_logokot">
 							<img src="images/kot.webp" alt="Mahadev Book" />
