index 2 removed and insta added in mobiile view

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<meta name="description"
-		content="Get In Touch With MAHADEV BOOK CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
+		content="Get In Touch With RR Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
 	<!-- <meta name="keywords" content="Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India"> -->
 	<link rel="icon" type="image/png" sizes="16x16" href="images/fav.png">
 	<title>Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India</title>
@@ -53,13 +53,13 @@
 					<a class="a_cfw" href="https://ig.me/m/prx.devs">Click for Instagram</a>
 				</div>
 				<div class="md_hdr_ctr">
-					<a href="index-2.html">
-						<img class="tplogo" src="./images/lightLogo1.png" alt="Mahadev Book" />
-						<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
+					<a href="index.html">
+						<img class="tplogo" src="./images/lightLogo1.png" alt="RR Book" />
+						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
 					</a>
 				</div>
 				<div class="md_hdr_rgt">
-					<!--<span>Mahadev Book Liveline App</span>-->
+					<!--<span>RR Book Liveline App</span>-->
 					<!--<a class="" target="_blank" href="https://play.google.com/store/apps/details?id=com.liveline.mahadevbook">-->
 					<!--	<img class="imgplay" src="images/gpay.webp" alt="playstore">-->
 					<!--	</a>-->
@@ -86,11 +86,11 @@
 				<div class="md_header">
 					<div class="md_header_inn">
 						<div class="md_hdr_lft">
-							<span>View Our Partners</span>
-							<a class="a_cfw" href="#websites">Click for websites</a>
+							<span>For Any Queries Instagram Us On</span>
+							<a class="a_cfw" href="https://ig.me/m/">Instagram</a>
 						</div>
 						<div class="md_hdr_rgt">
-							<!--<span>Mahadev Book Liveline App</span>-->
+							<!--<span>RR Book Liveline App</span>-->
 							<!--<a class="" target="_blank" href="https://play.google.com/store/apps/details?id=com.liveline.mahadevbook">-->
 							<!--	<img class="imgplay1" src="images/gpay.webp" alt="playstore">-->
 							<!--	</a>-->
@@ -101,44 +101,44 @@
 				</div>
 
 				<div class="md_banner_img">
-					<img src="images/players.webp" alt="Mahadev Book" />
+					<img src="images/players.webp" alt="RR Book" />
 					<div class="counter_cst">
 
 						<ul class="counter_cst_ul counter_cst_ul_1">
-							<li><img src="images/g9.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g1.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g2.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g3.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g4.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g5.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g6.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g7.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g8.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g9.webp" alt="Mahadev Book" /></li>
+							<li><img src="images/g9.webp" alt="RR Book" /></li>
+							<li><img src="images/g1.webp" alt="RR Book" /></li>
+							<li><img src="images/g2.webp" alt="RR Book" /></li>
+							<li><img src="images/g3.webp" alt="RR Book" /></li>
+							<li><img src="images/g4.webp" alt="RR Book" /></li>
+							<li><img src="images/g5.webp" alt="RR Book" /></li>
+							<li><img src="images/g6.webp" alt="RR Book" /></li>
+							<li><img src="images/g7.webp" alt="RR Book" /></li>
+							<li><img src="images/g8.webp" alt="RR Book" /></li>
+							<li><img src="images/g9.webp" alt="RR Book" /></li>
 						</ul>
 						<ul class="counter_cst_ul counter_cst_ul_2">
-							<li><img src="images/g9.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g5.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g3.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g8.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g2.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g1.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g6.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g7.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g4.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g9.webp" alt="Mahadev Book" /></li>
+							<li><img src="images/g9.webp" alt="RR Book" /></li>
+							<li><img src="images/g5.webp" alt="RR Book" /></li>
+							<li><img src="images/g3.webp" alt="RR Book" /></li>
+							<li><img src="images/g8.webp" alt="RR Book" /></li>
+							<li><img src="images/g2.webp" alt="RR Book" /></li>
+							<li><img src="images/g1.webp" alt="RR Book" /></li>
+							<li><img src="images/g6.webp" alt="RR Book" /></li>
+							<li><img src="images/g7.webp" alt="RR Book" /></li>
+							<li><img src="images/g4.webp" alt="RR Book" /></li>
+							<li><img src="images/g9.webp" alt="RR Book" /></li>
 						</ul>
 						<ul class="counter_cst_ul counter_cst_ul_3">
-							<li><img src="images/g9.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g8.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g7.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g6.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g4.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g5.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g2.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g3.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g1.webp" alt="Mahadev Book" /></li>
-							<li><img src="images/g9.webp" alt="Mahadev Book" /></li>
+							<li><img src="images/g9.webp" alt="RR Book" /></li>
+							<li><img src="images/g8.webp" alt="RR Book" /></li>
+							<li><img src="images/g7.webp" alt="RR Book" /></li>
+							<li><img src="images/g6.webp" alt="RR Book" /></li>
+							<li><img src="images/g4.webp" alt="RR Book" /></li>
+							<li><img src="images/g5.webp" alt="RR Book" /></li>
+							<li><img src="images/g2.webp" alt="RR Book" /></li>
+							<li><img src="images/g3.webp" alt="RR Book" /></li>
+							<li><img src="images/g1.webp" alt="RR Book" /></li>
+							<li><img src="images/g9.webp" alt="RR Book" /></li>
 						</ul>
 					</div>
 				</div>
@@ -176,13 +176,13 @@
 
 	<div class="md_wheels">
 		<div class="main">
-			<img class="md_girl" src="images/girl.webp" alt="Mahadev Book">
+			<img class="md_girl" src="images/girl.webp" alt="RR Book">
 			<div class="md_wheels_inn">
 				<div class="md_wheels_img">
-					<img class="bgwheel" src="images/wheel.webp" alt="Mahadev Book">
-					<img class="bgwheel2" src="images/wheel2.webp" alt="Mahadev Book">
-					<img class="bgspin" src="images/wheelcircle.webp" alt="Mahadev Book">
-					<img class="bgtop" src="images/coins.webp" alt="Mahadev Book">
+					<img class="bgwheel" src="images/wheel.webp" alt="RR Book">
+					<img class="bgwheel2" src="images/wheel2.webp" alt="RR Book">
+					<img class="bgspin" src="images/wheelcircle.webp" alt="RR Book">
+					<img class="bgtop" src="images/coins.webp" alt="RR Book">
 				</div>
 				<div class="md_wheels_con">
 					<h2>The Punter Friendly BOOK</h2>
@@ -203,7 +203,7 @@
 			<div class="md_cs_inn">
 				<div class="md_cs_lft">
 					<h2>Customer Support</h2>
-					<p>Get In Touch With MAHADEV BOOK CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or
+					<p>Get In Touch With RR Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or
 						Complaints. We Are Here To Help You 24/7 With Our Online Services.</p>
 					<hr>
 					<h5>Customer Care No. For WhatsApp & Calling</h5>
@@ -215,10 +215,10 @@
 				</div>
 				<div class="md_cs_rgt">
 					<div class="md_logocs">
-						<img class="tplogo" src="./images/lightLogo1.png" alt="Mahadev Book" />
-						<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
+						<img class="tplogo" src="./images/lightLogo1.png" alt="RR Book" />
+						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
 						<div class="md_logokot">
-							<img src="images/kot.webp" alt="Mahadev Book" />
+							<img src="images/kot.webp" alt="RR Book" />
 						</div>
 					</div>
 					<h2>24 hours service</h2>
@@ -232,35 +232,35 @@
 			<div class="md_htp_inn">
 				<div class="md_htp_lft">
 					<div class="md_htp_blk">
-						<!-- <img src="images/h1.webp" alt="Mahadev Book" /> -->
+						<!-- <img src="images/h1.webp" alt="RR Book" /> -->
 						<img class="h1" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
 						<h2>Cricket</h2>
 					</div>
 					<div class="md_htp_blk">
-						<!-- <img src="images/h2.webp" alt="Mahadev Book" /> -->
+						<!-- <img src="images/h2.webp" alt="RR Book" /> -->
 						<img class="h2" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
 						<h2>Football</h2>
 					</div>
 					<div class="md_htp_blk">
-						<!-- <img src="images/h3.webp" alt="Mahadev Book" /> -->
+						<!-- <img src="images/h3.webp" alt="RR Book" /> -->
 						<img class="h3" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
 						<h2>Tennis</h2>
 					</div>
 					<div class="md_htp_blk">
-						<!-- <img src="images/h4.webp" alt="Mahadev Book" /> -->
+						<!-- <img src="images/h4.webp" alt="RR Book" /> -->
 						<img class="h4" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
 						<h2>Casino</h2>
 					</div>
 					<div class="md_htp_blk">
-						<!-- <img src="images/h5.webp" alt="Mahadev Book" /> -->
+						<!-- <img src="images/h5.webp" alt="RR Book" /> -->
 						<img class="h5" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
@@ -642,13 +642,13 @@
 		<div class="main">
 			<div class="md_ftr_blk">
 				<div class="md_ftr_logo">
-					<a href="index-2.html">
-						<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
-						<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
+					<a href="index.html">
+						<img class="tplogo" src="images/lightLogo1.png" alt="RR Book" />
+						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
 					</a>
 				</div>
 				<div class="md_ftr_con">
-					<h2>Get In Touch With Mahadev Book Customer Care</h2>
+					<h2>Get In Touch With RR Book Customer Care</h2>
 					<p>For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our
 						Online Services.</p>
 					<h3>Whatsapp us on</h3>
