new cover pic in main page added

--- a/index.html
+++ b/index.html
@@ -157,17 +157,17 @@
 					</div>
 			<div class="md_sites_logo">
 	
-		<a href="laser.html"><img class="s1" alt="" src="images/s1.webp">
+		<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s1" alt="" src="images/s1.webp">
 				</a>
-				<a href="betbhai.html"><img class="s3" alt="" src="images/s3.webp">
+				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s3" alt="" src="images/s3.webp">
 				</a>
-				<a href="tiger.html"><img class="s4" alt="" src="images/s4.webp">
+				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s4" alt="" src="images/s4.webp">
 				</a>
-				<a href="cricketbet9.html"><img class="s6" alt="" src="images/s6.webp">
+				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s6" alt="" src="images/s6.webp">
 				</a>
-				<a href="betbook.html"><img class="s5" alt="" src="images/s5.webp">
+				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s5" alt="" src="images/s5.webp">
 				</a>
-				<a href="jack9.html"><img class="s2" alt="" src="images/s2.webp">
+				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s2" alt="" src="images/s2.webp">
 				</a>
 				
 			</div>
@@ -217,9 +217,9 @@
 					<div class="md_logocs">
 						<img class="tplogo" src="./images/lightLogo1.png" alt="RR Book" />
 						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
-						<div class="md_logokot">
+						<!-- <div class="md_logokot">
 							<img src="images/kot.webp" alt="RR Book" />
-						</div>
+						</div> -->
 					</div>
 					<h2>24 hours service</h2>
 				</div>
