--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 					<img class="bgwheel" src="images/wheel.webp" alt="RR Book">
 					<img class="bgwheel2" src="images/wheel2.webp" alt="RR Book">
 					<img class="bgspin" src="images/wheelcircle.webp" alt="RR Book">
+					<!-- <img class="modi" src="images/wheelcircle.webp" alt="RR Book"> -->
 					<img class="bgtop" src="images/coins.webp" alt="RR Book">
 				</div>
 				<div class="md_wheels_con">
