added second logo

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				</a>
 				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s4" alt="" src="images/s4.webp">
 				</a>
-				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s6" alt="" src="images/s6.webp">
+				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s6" alt="" src="./images/secondlogo.PNG">
 				</a>
 				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s5" alt="" src="images/s5.webp">
 				</a>
