--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</div>
 				<div class="md_hdr_ctr">
 					<a href="index.html">
-						<img class="tplogo" src="./images/lightLogo1.png" alt="RR Book" />
+						<img class="tplogo" src="./images/lightlogo2.PNG" alt="RR Book" />
 						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
 					</a>
 				</div>
@@ -644,7 +644,7 @@
 			<div class="md_ftr_blk">
 				<div class="md_ftr_logo">
 					<a href="index.html">
-						<img class="tplogo" src="images/lightLogo1.png" alt="RR Book" />
+						<img class="tplogo" src="images/lightlogo2.PNG" alt="RR Book" />
 						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
 					</a>
 				</div>
