--- a/gpr247.html
+++ b/gpr247.html
@@ -2,24 +2,24 @@
 <!doctype html>
 <html>
 
-<!-- Mirrored from www.mahadevbook.com/betbhai.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 05:00:46 GMT -->
+<!-- Mirrored from www.mahadevbook.com/cricketbet9.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 05:00:46 GMT -->
 <head>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-<meta name="description" content="Get In Touch With MAHADEV BOOK CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
+<meta name="description" content="Get In Touch With Baazigar Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
 <!-- <meta name="keywords" content="Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India"> -->
 <link rel="icon" type="image/png" sizes="16x16" href="images/fav.png">
-<title>Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India</title>
+<title>Baazigar Book - GPR</title>
 <link rel="stylesheet" type="text/css" href="css/owl.css" />
 <link rel="stylesheet" type="text/css" href="css/main.css" />
 <link rel="stylesheet" type="text/css" href="css/responsive.css" />
 <script type="text/javascript" src="js/jquery.min.js" ></script>
 <script type="text/javascript" src="js/owl.js" ></script>
-<script type="text/javascript" src="js/at-jquery.js" ></script>
+<script type="text/javascript" src="js/at-jquery.js"  ></script>
 <!-- Google Tag Manager -->
 <script type="text/javascript" src="js/scripts.js"></script>
     <!-- End Google Tag Manager -->
-    <script>
+    	<script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
   n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -34,13 +34,14 @@
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNTNM2N"
-		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-		    <noscript><img height="1" width="1" style="display:none"
+	    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNTNM2N"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    			<noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=808801107139557&amp;ev=PageView&amp;noscript=1"
 /></noscript>
-		<!-- End Google Tag Manager (noscript) -->
+    <!-- End Google Tag Manager (noscript) -->
+
 <div class="md_header">
 	<div class="main">
 		<div class="md_header_inn">
@@ -50,8 +51,8 @@
 			</div>
 			<div class="md_hdr_ctr">
 				<a href="index-2.html">
-					<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
-					<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
+					<img class="tplogo" src="images/lightlogo2.PNG" alt="Baazigar Book" />
+					<!-- <img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" /> -->
 				</a>
 			</div>
 			<div class="md_hdr_rgt">
@@ -71,12 +72,12 @@
 
 <div class="md_insta" style="text-align: center;">
 	<div class="main" style="text-align: center">
-		<h2><img src="images/s3.webp" alt="Mahadev Book"></h2>
+		<h2><img src="images/gpr.png" alt="Baazigar Book" width="294px"></h2>
 		<div class="md_insta_dv" style="text-align: center; width: 100%;">
-			<h3 style="text-align: center; width: 100%">SITE : <a href="https://www.betbhai.com/" target="_blank">www.betbhai.com</a><br/><br/>
+			<h3 style="text-align: center; width: 100%">SITE : <a href="https://gpr247.com/" target="_blank">www.gpr247.com</a><br/><br/>
 				DEMO ID<br/><br/>
-				User ID: betbhai3<br/>
-				Pass: Demo1234<br/><br/>
+				User ID = g1demo2911<br/>
+				Pass = Abcd1234<br/><br/>
 				--------<br/><br/>
 				1point @1 Rupees Balance<br/><br/>
 				--------<br/><br/>
@@ -92,17 +93,15 @@
 	<div class="main">
 		<h2 style="text-align: center">Available Sites</h2>
 		<div class="md_sites_logo">
-			<a href="laser.html"><img class="s1" alt="" src="images/s1.webp">
+			<a href="./tenx.html"><img class="s1" alt="" src="images/logo.png">
 			</a>
-			<a href="betbhai.html"><img class="s3" alt="" src="images/s3.webp">
+			<a href="./runner777.html"><img class="s3" alt="" src="images/runner.png">
 			</a>
-			<a href="tiger.html"><img class="s4" alt="" src="images/s4.webp">
+			<a href="./gpr247.html"><img class="s4" alt="" src="images/gpr.png">
 			</a>
-			<a href="cricketbet9.html"><img class="s6" alt="" src="images/s6.webp">
+			<a href="./index.html"><img class="s6" alt="" src="./images/bb.gif">
 			</a>
-			<a href="betbook.html"><img class="s5" alt="" src="images/s5.webp">
-			</a>
-			<a href="jack9.html"><img class="s2" alt="" src="images/s2.webp">
+			<a href="./diamond.html"><img style="position: absolute;" class="s5" alt="" src="images/diamond.png">
 			</a>
 		</div>
 	</div>
@@ -113,12 +112,12 @@
 		<div class="md_ftr_blk">
 			<div class="md_ftr_logo">
 				<a href="index.html">
-					<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
-					<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
+					<img class="tplogo" src="images/gpr.png" alt="Baazigar Book" />
+					<!-- <img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" /> -->
 				</a>
 			</div>
 			<div class="md_ftr_con">
-				<h2>Get In Touch With Mahadev Book Customer Care</h2>
+				<h2>Get In Touch With Baazigar Book Customer Care</h2>
 				<p>For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.</p>
 				<h3>Whatsapp us on</h3>
 				<div class="md_cmn_wa">
@@ -136,5 +135,5 @@
 
 </body>
 
-<!-- Mirrored from www.mahadevbook.com/betbhai.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 05:00:46 GMT -->
+<!-- Mirrored from www.mahadevbook.com/cricketbet9.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 05:00:46 GMT -->
 </html>
