--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 
 
-<!-- Mirrored from www.mahadevbook.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 04:54:45 GMT -->
+<!-- Mirrored from www.BaazigarBook.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 04:54:45 GMT -->
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<meta name="description"
-		content="Get In Touch With RR Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
+		content="Get In Touch With Baazigar Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
 	<!-- <meta name="keywords" content="Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India"> -->
 	<link rel="icon" type="image/png" sizes="16x16" href="images/fav.png">
-	<title>Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India</title>
+	<title>Baazigar Book</title>
 	<link rel="stylesheet" type="text/css" href="css/owl.css" />
 	<link rel="stylesheet" type="text/css" href="css/main0be4.css?v1.5" />
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" />
@@ -54,13 +54,13 @@
 				</div>
 				<div class="md_hdr_ctr">
 					<a href="index.html">
-						<img class="tplogo" src="./images/lightlogo2.PNG" alt="RR Book" />
-						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
+						<img class="tplogo" src="./images/lightlogo2.PNG" alt="Baazigar Book" />
+						<img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" />
 					</a>
 				</div>
 				<div class="md_hdr_rgt">
-					<!--<span>RR Book Liveline App</span>-->
-					<!--<a class="" target="_blank" href="https://play.google.com/store/apps/details?id=com.liveline.mahadevbook">-->
+					<!--<span>Baazigar Book Liveline App</span>-->
+					<!--<a class="" target="_blank" href="https://play.google.com/store/apps/details?id=com.liveline.BaazigarBook">-->
 					<!--	<img class="imgplay" src="images/gpay.webp" alt="playstore">-->
 					<!--	</a>-->
 					<span>For Any Queries WhatsApp Us On</span>
@@ -90,8 +90,8 @@
 							<a class="a_cfw" href="https://ig.me/m/">Instagram</a>
 						</div>
 						<div class="md_hdr_rgt">
-							<!--<span>RR Book Liveline App</span>-->
-							<!--<a class="" target="_blank" href="https://play.google.com/store/apps/details?id=com.liveline.mahadevbook">-->
+							<!--<span>Baazigar Book Liveline App</span>-->
+							<!--<a class="" target="_blank" href="https://play.google.com/store/apps/details?id=com.liveline.BaazigarBook">-->
 							<!--	<img class="imgplay1" src="images/gpay.webp" alt="playstore">-->
 							<!--	</a>-->
 							<span>For Any Queries WhatsApp Us On</span>
@@ -101,44 +101,44 @@
 				</div>
 
 				<div class="md_banner_img">
-					<img src="images/players.webp" alt="RR Book" />
+					<img src="images/players.webp" alt="Baazigar Book" />
 					<div class="counter_cst">
 
 						<ul class="counter_cst_ul counter_cst_ul_1">
-							<li><img src="images/g9.webp" alt="RR Book" /></li>
-							<li><img src="images/g1.webp" alt="RR Book" /></li>
-							<li><img src="images/g2.webp" alt="RR Book" /></li>
-							<li><img src="images/g3.webp" alt="RR Book" /></li>
-							<li><img src="images/g4.webp" alt="RR Book" /></li>
-							<li><img src="images/g5.webp" alt="RR Book" /></li>
-							<li><img src="images/g6.webp" alt="RR Book" /></li>
-							<li><img src="images/g7.webp" alt="RR Book" /></li>
-							<li><img src="images/g8.webp" alt="RR Book" /></li>
-							<li><img src="images/g9.webp" alt="RR Book" /></li>
+							<li><img src="images/g9.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g1.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g2.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g3.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g4.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g5.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g6.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g7.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g8.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g9.webp" alt="Baazigar Book" /></li>
 						</ul>
 						<ul class="counter_cst_ul counter_cst_ul_2">
-							<li><img src="images/g9.webp" alt="RR Book" /></li>
-							<li><img src="images/g5.webp" alt="RR Book" /></li>
-							<li><img src="images/g3.webp" alt="RR Book" /></li>
-							<li><img src="images/g8.webp" alt="RR Book" /></li>
-							<li><img src="images/g2.webp" alt="RR Book" /></li>
-							<li><img src="images/g1.webp" alt="RR Book" /></li>
-							<li><img src="images/g6.webp" alt="RR Book" /></li>
-							<li><img src="images/g7.webp" alt="RR Book" /></li>
-							<li><img src="images/g4.webp" alt="RR Book" /></li>
-							<li><img src="images/g9.webp" alt="RR Book" /></li>
+							<li><img src="images/g9.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g5.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g3.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g8.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g2.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g1.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g6.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g7.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g4.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g9.webp" alt="Baazigar Book" /></li>
 						</ul>
 						<ul class="counter_cst_ul counter_cst_ul_3">
-							<li><img src="images/g9.webp" alt="RR Book" /></li>
-							<li><img src="images/g8.webp" alt="RR Book" /></li>
-							<li><img src="images/g7.webp" alt="RR Book" /></li>
-							<li><img src="images/g6.webp" alt="RR Book" /></li>
-							<li><img src="images/g4.webp" alt="RR Book" /></li>
-							<li><img src="images/g5.webp" alt="RR Book" /></li>
-							<li><img src="images/g2.webp" alt="RR Book" /></li>
-							<li><img src="images/g3.webp" alt="RR Book" /></li>
-							<li><img src="images/g1.webp" alt="RR Book" /></li>
-							<li><img src="images/g9.webp" alt="RR Book" /></li>
+							<li><img src="images/g9.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g8.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g7.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g6.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g4.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g5.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g2.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g3.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g1.webp" alt="Baazigar Book" /></li>
+							<li><img src="images/g9.webp" alt="Baazigar Book" /></li>
 						</ul>
 					</div>
 				</div>
@@ -157,17 +157,17 @@
 					</div>
 			<div class="md_sites_logo">
 	
-		<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s1" alt="" src="images/s1.webp">
+				<a href="./tenx.html"><img class="s1" alt="" src="images/logo.png">
 				</a>
-				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s3" alt="" src="images/s3.webp">
+				<a href="./runner777.html"><img class="s3" alt="" src="images/runner.png">
 				</a>
-				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s4" alt="" src="images/s4.webp">
+				<a href="./gpr247.html"><img class="s4" alt="" src="images/gpr.png">
 				</a>
-				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s6" alt="" src="./images/secondlogo.PNG">
+				<a href="./index.html"><img class="s6" alt="" src="./images/bb.gif">
 				</a>
-				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s5" alt="" src="images/s5.webp">
+				<a href="./diamond.html"><img style="position: absolute;" class="s5" alt="" src="images/diamond.png">
 				</a>
-				<a href="https://api.whatsapp.com/send?phone=919586370628"><img class="s2" alt="" src="images/s2.webp">
+				
 				</a>
 				
 			</div>
@@ -176,14 +176,14 @@
 
 	<div class="md_wheels">
 		<div class="main">
-			<img class="md_girl" src="images/girl.webp" alt="RR Book">
+			<img class="md_girl" src="images/girl.webp" alt="Baazigar Book">
 			<div class="md_wheels_inn">
 				<div class="md_wheels_img">
-					<img class="bgwheel" src="images/wheel.webp" alt="RR Book">
-					<img class="bgwheel2" src="images/wheel2.webp" alt="RR Book">
-					<img class="bgspin" src="images/wheelcircle.webp" alt="RR Book">
-					<!-- <img class="modi" src="images/wheelcircle.webp" alt="RR Book"> -->
-					<img class="bgtop" src="images/coins.webp" alt="RR Book">
+					<img class="bgwheel" src="images/wheel.webp" alt="Baazigar Book">
+					<img class="bgwheel2" src="images/wheel2.webp" alt="Baazigar Book">
+					<img class="bgspin" src="images/wheelcircle.webp" alt="Baazigar Book">
+					<!-- <img class="modi" src="images/wheelcircle.webp" alt="Baazigar Book"> -->
+					<img class="bgtop" src="images/coins.webp" alt="Baazigar Book">
 				</div>
 				<div class="md_wheels_con">
 					<h2>The Punter Friendly BOOK</h2>
@@ -204,7 +204,7 @@
 			<div class="md_cs_inn">
 				<div class="md_cs_lft">
 					<h2>Customer Support</h2>
-					<p>Get In Touch With RR Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or
+					<p>Get In Touch With Baazigar Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or
 						Complaints. We Are Here To Help You 24/7 With Our Online Services.</p>
 					<hr>
 					<h5>Customer Care No. For WhatsApp & Calling</h5>
@@ -216,10 +216,10 @@
 				</div>
 				<div class="md_cs_rgt">
 					<div class="md_logocs">
-						<img class="tplogo" src="./images/lightLogo1.png" alt="RR Book" />
-						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
+						<img class="tplogo" src="./images/lightlogo2.PNG" alt="Baazigar Book" />
+						<img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" />
 						<!-- <div class="md_logokot">
-							<img src="images/kot.webp" alt="RR Book" />
+							<img src="images/kot.webp" alt="Baazigar Book" />
 						</div> -->
 					</div>
 					<h2>24 hours service</h2>
@@ -233,35 +233,35 @@
 			<div class="md_htp_inn">
 				<div class="md_htp_lft">
 					<div class="md_htp_blk">
-						<!-- <img src="images/h1.webp" alt="RR Book" /> -->
+						<!-- <img src="images/h1.webp" alt="Baazigar Book" /> -->
 						<img class="h1" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
 						<h2>Cricket</h2>
 					</div>
 					<div class="md_htp_blk">
-						<!-- <img src="images/h2.webp" alt="RR Book" /> -->
+						<!-- <img src="images/h2.webp" alt="Baazigar Book" /> -->
 						<img class="h2" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
 						<h2>Football</h2>
 					</div>
 					<div class="md_htp_blk">
-						<!-- <img src="images/h3.webp" alt="RR Book" /> -->
+						<!-- <img src="images/h3.webp" alt="Baazigar Book" /> -->
 						<img class="h3" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
 						<h2>Tennis</h2>
 					</div>
 					<div class="md_htp_blk">
-						<!-- <img src="images/h4.webp" alt="RR Book" /> -->
+						<!-- <img src="images/h4.webp" alt="Baazigar Book" /> -->
 						<img class="h4" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
 						<h2>Casino</h2>
 					</div>
 					<div class="md_htp_blk">
-						<!-- <img src="images/h5.webp" alt="RR Book" /> -->
+						<!-- <img src="images/h5.webp" alt="Baazigar Book" /> -->
 						<img class="h5" alt=""
 							src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMUAAADEAQMAAAAVqncWAAAAA1BMVEX///+nxBvIAAAAAXRSTlMAQObYZgAAABxJREFUeNrtwQENAAAAwqD3T20ON6AAAAAAgHcDE+gAAeOs5SYAAAAASUVORK5CYII=">
 
@@ -284,7 +284,7 @@
 		</div>
 	</div>
 
-	<div class="lb_celeb">
+	<!-- <div class="lb_celeb">
 		<div class="main">
 
 			<div class="celeb_wrap">
@@ -597,10 +597,12 @@
 			</div>
 
 		</div>
-	</div>
+	</div> -->
+
 	<div class="md_insta">
 		<div class="main">
-			<h2>Instagram <a href="https://www.instagram.com/mahadevbookofficial/" target="_blank"><img
+			<!-- <img style="width:20%; position:relative; left:40%;" src="./images/bb.gif" /> -->
+			<h2>Instagram <a href="https://www.instagram.com/BaazigarBookofficial/" target="_blank"><img
 						src="images/insta.webp" alt="" />Follow</a></h2>
 			<div class="md_insta_dv">
 				<div class="md_insta_pic">
@@ -644,12 +646,12 @@
 			<div class="md_ftr_blk">
 				<div class="md_ftr_logo">
 					<a href="index.html">
-						<img class="tplogo" src="images/lightlogo2.PNG" alt="RR Book" />
-						<img class="btmlogo" src="images/cards.gif" alt="RR Book" />
+						<img class="tplogo" src="images/lightlogo2.PNG" alt="Baazigar Book" />
+						<img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" />
 					</a>
 				</div>
 				<div class="md_ftr_con">
-					<h2>Get In Touch With RR Book Customer Care</h2>
+					<h2>Get In Touch With Baazigar Book Customer Care</h2>
 					<p>For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our
 						Online Services.</p>
 					<h3>Whatsapp us on</h3>
@@ -694,5 +696,5 @@
 </body>
 
 
-<!-- Mirrored from www.mahadevbook.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 05:00:31 GMT -->
+<!-- Mirrored from www.BaazigarBook.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Dec 2022 05:00:31 GMT -->
 </html>
