--- a/jack9.html
+++ b/jack9.html
@@ -52,7 +52,7 @@
 			</div>
 			<div class="md_hdr_ctr">
 				<a href="index-2.html">
-					<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
+					<img class="tplogo" src="images/lightlogo2.PNG" alt="Mahadev Book" />
 					<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
 				</a>
 			</div>
@@ -115,7 +115,7 @@
 		<div class="md_ftr_blk">
 			<div class="md_ftr_logo">
 				<a href="index.html">
-					<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
+					<img class="tplogo" src="images/lightlogo2.PNG" alt="Mahadev Book" />
 					<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
 				</a>
 			</div>
