--- a/runner777.html
+++ b/runner777.html
@@ -7,10 +7,10 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<meta name="description"
-		content="Get In Touch With MAHADEV BOOK CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
+		content="Get In Touch With Baazigar Book CUSTOMER CARE For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our Online Services.">
 	<!-- <meta name="keywords" content="Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India"> -->
 	<link rel="icon" type="image/png" sizes="16x16" href="images/fav.png">
-	<title>Online Cricket betting ID | Online Casino id | Get Best Bookie sites in India</title>
+	<title>Baazigar Book - Runner</title>
 	<link rel="stylesheet" type="text/css" href="css/owl.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" />
@@ -52,8 +52,8 @@
 				</div>
 				<div class="md_hdr_ctr">
 					<a href="index-2.html">
-						<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
-						<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
+						<img class="tplogo" src="images/lightlogo2.PNG" alt="Baazigar Book" />
+						<!-- <img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" /> -->
 					</a>
 				</div>
 				<div class="md_hdr_rgt">
@@ -74,10 +74,10 @@
 
 	<div class="md_insta" style="text-align: center;">
 		<div class="main" style="text-align: center">
-			<h2><img src="images/s5.webp" alt="Mahadev Book" width="272px"></h2>
+			<h2><img src="images/runner.png" alt="Baazigar Book" width="272px"></h2>
 			<div class="md_insta_dv" style="text-align: center; width: 100%;">
-				<h3 style="text-align: center; width: 100%">SITE : <a href="https://www.betbook247.com/"
-						target="_blank">www.betbook247.com</a><br /><br />
+				<h3 style="text-align: center; width: 100%">SITE : <a href="https://runner777.com/"
+						target="_blank">www.runner777.com</a><br /><br />
 					DEMO ID<br /><br />
 					User ID = demo111devi<br />
 					Pass = Abcd1212<br /><br />
@@ -96,17 +96,15 @@
 		<div class="main">
 			<h2 style="text-align: center">Available Sites</h2>
 			<div class="md_sites_logo">
-				<a href="laser.html"><img class="s1" alt="" src="images/s1.webp">
+				<a href="./tenx.html"><img class="s1" alt="" src="images/logo.png">
 				</a>
-				<a href="betbhai.html"><img class="s3" alt="" src="images/s3.webp">
+				<a href="./runner777.html"><img class="s3" alt="" src="images/runner.png">
 				</a>
-				<a href="tiger.html"><img class="s4" alt="" src="images/s4.webp">
+				<a href="./gpr247.html"><img class="s4" alt="" src="images/gpr.png">
 				</a>
-				<a href="cricketbet9.html"><img class="s6" alt="" src="images/s6.webp">
+				<a href="./index.html"><img class="s6" alt="" src="./images/bb.gif">
 				</a>
-				<a href="betbook.html"><img class="s5" alt="" src="images/s5.webp">
-				</a>
-				<a href="jack9.html"><img class="s2" alt="" src="images/s2.webp">
+				<a href="./diamond.html"><img style="position: absolute;" class="s5" alt="" src="images/diamond.png">
 				</a>
 			</div>
 		</div>
@@ -117,12 +115,12 @@
 			<div class="md_ftr_blk">
 				<div class="md_ftr_logo">
 					<a href="index.html">
-						<img class="tplogo" src="images/lightLogo1.png" alt="Mahadev Book" />
-						<img class="btmlogo" src="images/cards.gif" alt="Mahadev Book" />
+						<img class="tplogo" src="images/runner.png" alt="Baazigar Book" />
+						<!-- <img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" /> -->
 					</a>
 				</div>
 				<div class="md_ftr_con">
-					<h2>Get In Touch With Mahadev Book Customer Care</h2>
+					<h2>Get In Touch With Baazigar Book Customer Care</h2>
 					<p>For Any Queries, Emergencies, Feedbacks or Complaints. We Are Here To Help You 24/7 With Our
 						Online Services.</p>
 					<h3>Whatsapp us on</h3>
