bekaar.mp4 changed

--- a/index.html
+++ b/index.html
@@ -74,13 +74,19 @@
 		<div class="main">
 			<div class="md_banner_inn">
 				<div class="md_banner_con">
-					<h2>Imandari ek mahanga shok hai jo har kisike bas ki baat nahi hoti.</h2>
+					<h2>Haar Kar Jeetne Wale Ko <span style="color:#ffd151;">Baazigar</span> Kehte Hai.</h2>
+					<!-- <div style="background-color: black; padding: 9px 0 2px 15px ; border-radius: 25px; width:65%">
+						<h2>Get 10% bonus on 1st deposit.</h2>
+					<h2>Get 5% bonus on all other deposit.</h2>
+					</div> -->
+					<video style="width:60%; border-radius: 20px;" src="./images/bekaar.mp4" autoplay loop></video>
+					
 					<h1>MOST TRUSTED BOOK EVER</h1>
-					<h5>For New ID WhatsApp us on</h5>
+					<!-- <h5>For New ID WhatsApp us on</h5>
 					<div class="md_banner_wa">
 						<a class="a_wa" target="_blank" href="https://api.whatsapp.com/send?phone=918888438888">+91 88884 38888</a>
 						<a class="a_wa" target="_blank" href="https://api.whatsapp.com/send?phone=918988587888">+91 89885 87888</a>
-					</div>
+					</div> -->
 				</div>
 
 				<div class="md_header">
