--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<h2>Get 10% bonus on 1st deposit.</h2>
 					<h2>Get 5% bonus on all other deposit.</h2>
 					</div> -->
-					<video style="width:60%; border-radius: 20px;" src="./images/bekaar.mp4" autoplay loop></video>
+					<video id="bekaar" style="width:60%; border-radius: 20px;" src="./images/bekaar.mp4" autoplay loop muted></video>
 					
 					<h1>MOST TRUSTED BOOK EVER</h1>
 					<!-- <h5>For New ID WhatsApp us on</h5>
