--- a/diamond.html
+++ b/diamond.html
@@ -51,7 +51,7 @@
 				<a class="a_cfw" href="#websites">Click for websites</a>
 			</div>
 			<div class="md_hdr_ctr">
-				<a href="index-2.html">
+				<a href="./index.html">
 					<img class="tplogo" src="images/lightlogo2.PNG" alt="Baazigar Book" />
 					<!-- <img class="btmlogo" src="images/cards.gif" alt="Baazigar Book" /> -->
 				</a>
