some changes in first section of page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	<div class="md_sites" id="websites" >
 		<div class="main">
-			<!--<h2>Available Sites</h2>-->
+			<!-- <h2>Available Sites</h2> -->
 				<div class="md_banner_inn">
 				<div class="md_banner_con">
 					<!-- <h1>Available Sites</h1> -->
@@ -56,7 +56,7 @@
 				</a>
 				<a href="./index.html"><img class="s6" alt="" src="./images/bb.gif">
 				</a>
-				<a href="./diamond.html"><img style="position: absolute;" class="s5" alt="" src="images/diamond.png">
+				<a href="./diamond.html"><img style="" class="s5" alt="" src="images/diamond.png">
 				</a>
 				
 				</a>
