change in first page offer box

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<h2>Get 10% bonus on 1st deposit.</h2>
 					<h2>Get 5% bonus on all other deposit.</h2>
 					</div> -->
-					<video id="bekaar" style="width:60%; border-radius: 20px; " src="./images/bekaar.mp4" autoplay loop muted></video>
+					<video id="bekaar" style="width:94%; border-radius: 20px; margin-left: 5px; " src="./images/bekaar.mp4" autoplay loop muted></video>
 					
 					<h1>MOST TRUSTED BOOK EVER</h1>
 					<!-- <h5>For New ID WhatsApp us on</h5>
